--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 #Root logger option
-log=logs
-log4j.rootLogger=WARN, stdout, file, html
+log=C:/logs
+log4j.rootLogger=ALL, file, html
 
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
@@ -10,7 +10,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1
 
 # Direct log messages to file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=${log}/Log.log
+log4j.appender.file.File=${log}/bankApp.log
 log4j.appender.file.MaxFileSize=10MB
 log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
